# SIFT

./: .gitignore  CMakeLists.txt  SIFT.txt  main.cpp
include/: descriptor.hpp  dog.hpp  histogram.hpp  keypointDetection.hpp  refine.hpp  scaleSpace.hpp  sift.hpp  visualization.hpp
src/: descriptor.cpp  dog.cpp  histogram.cpp  keypointDetection.cpp  refine.cpp  scaleSpace.cpp  sift.cpp  visualization.cpp
tests/: CMakeLists.txt  test_descriptor.cpp  test_dog.cpp  test_histogram.cpp  test_keypointDetection.cpp  test_refine.cpp  test_scaleSpace.cpp  test_visualization.cpp
